--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,15 @@ after_success:
   - docker push accarter/multi-nginx
   - docker push accarter/multi-server
   - docker push accarter/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "multi-docker"
+  env: "MultiDocker-env"
+  bucket_name: "elasticbeanstalk-us-east-1-888213898874"
+  bucket_path: "docker-multi"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
